# AIRISE-kaggle

./: README.md  main.py  pyproject.toml
notebook/: data_analysis.ipynb
src/: data_loader.py  data_preprocess.py
src/data/: data_preprocess.py
src/models/: __init__.py  base.py  base_detector.py  isolation_forest.py
