[project]
name = "airise-tsc-kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.7.4.5",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "polars-lts-cpu>=1.32.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pyarrow>=21.0.0",
]
