[project]
name = "airise-tsc-kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.7.4.5",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
]
